fixed overflow

--- a/css/style.scss
+++ b/css/style.scss
@@ -65,6 +65,8 @@ $verticals:2;
 body, html {
   margin: 0;
   padding: 0;
+  height: 100%;
+  min-height: 100%;
   &::selection,
   &::-moz-selection {
     background:#ff0;
